@@ -1,5 +1,9 @@
 2011-05-12  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* src/ac.c (verify_user_0): New.
+	(verify_pso_cds, verify_admin_0): Use verify_user_0.
+	* src/openpgp.c (cmd_change_password): Use verify_user_0.
+
 	* src/random.c (get_salt): Rename from get_random.
 	(random_bytes_get, random_bytes_free): It's 16-byte.
 
